--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@clerk/clerk-react": "^5.32.4",
     "axios": "^1.10.0",
+    "cors": "^2.8.5",
     "gsap": "^3.13.0",
     "hot": "^0.0.7",
     "react": "^19.1.0",
