--- a/backend/config/.env
+++ b/backend/config/.env
@@ -1,3 +1,3 @@
 PORT=4000
-FRONTEND_URL=http://localhost:5173
+FRONTEND_URL=https://dinenow-1-frontend.onrender.com
 MONGODB_URI=mongodb+srv://anshiKA:gVtLKVErDNGdZZ6n@cluster0.ktmkp1b.mongodb.net/RESTAURANT_BOOKING?retryWrites=true&w=majority
